[package]
name = "untamed_realms"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy= "0.11.0"
rand="0.8.5"
reqwest = {version = "0.11.18", features = ["json"]}
bevy_mod_picking = { version = "0.14.0", git = "https://github.com/bardt/bevy_mod_picking.git", rev = "7ecb60e08735ce82f9ff03ba5adb434c1e336afd" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
