[package]
name = "untamed_realms"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy= "0.11.2"
rand="0.8.5"
bevy_mod_picking = { version = "0.14.0", git = "https://github.com/bardt/bevy_mod_picking.git", rev = "7ecb60e08735ce82f9ff03ba5adb434c1e336afd" }
bevy_egui = "0.21.0"
dotenv = "0.15.0"
openai-rust = "0.5.1"
tokio = { version = "1.32.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
